--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     # On Linux
     <span style=color:#30ba78>curl -sfL https://fuseml.github.io/in/installer.ps1 | sh -</span>
     # Install fuseml in your K8s cluster
-    <span style=color:#30ba78>fuseml install</span>
+    <span style=color:#30ba78>fuseml-installer install</span>
     # Clone our examples folders
-    <span style=color:#30ba78>git clone https://github.com/fuseml/fuseml.git</span>
-    # Let's deploy a full end-to-end example
-    <span style=color:#30ba78>fuseml push  mlflow-model examples/mlflow-model</span>
+    <span style=color:#30ba78>git clone https://github.com:fuseml/examples.git</span>
+    # Use our step-by-step guide
+    <span style=color:#30ba78>https://github.com/fuseml/fuseml-core#example"</span>
     # Done!
     </code>
 </pre>We are super-busy building an awesome project, please come back to check next release.<br><b>Our community is growing fast, come help us!<b></p><div class=links><a rel=me href=https://github.com/fuseml/fuseml/wiki title=Docs><span class="fas fa-book"></span></a><a rel=me href=https://github.com/fuseml/fuseml title=Github><span class="fab fa-github"></span></a><a rel=me href=https://github.com/fuseml/fuseml/issues/new/choose title="Leave a feedback"><span class="far fa-comment-dots"></span></a></div></div></div></main><footer><div class=column></div><div class=column>Made with <a href=https://gohugo.io>Hugo</a> using the <a href=https://github.com/EmielH/hallo-hugo/>Hallo</a> theme.</div></footer></body></html>
